# bzd-messages

./: Cargo.toml  README.md
lib/api/: Cargo.toml  build.rs
lib/api/src/: events.proto  lib.rs  messages.proto  topics.proto
lib/migration/: Cargo.toml
lib/migration/src/: entities.rs  lib.rs  m20250912_141720_create_topics.rs  m20250912_162515_create_messages.rs  m20250914_122002_create_streams.rs  m20250914_122217_create_messages_streams.rs  m20250914_122535_create_streams_users.rs  m20250914_122723_create_messages_topics.rs  m20251027_072804_create_topics_users.rs  m20260127_142240_create_messages_users.rs  m20260221_073831_add_code_to_topics.rs  main.rs
settings/: default.toml
src/: app.rs
src/app/: current_user.rs  error.rs  grpc.rs  mess.rs  messages.rs  settings.rs  state.rs  topics.rs
src/app/messages/: events.rs  grpc.rs  repo.rs  service.rs  settings.rs  state.rs
src/app/messages/repo/: message.rs  message_stream.rs  message_topic.rs  message_user.rs  stream.rs  stream_user.rs  topic.rs
src/app/topics/: events.rs  grpc.rs  repo.rs  service.rs  settings.rs  state.rs
src/app/topics/repo/: topic.rs  topic_user.rs
