[package]
name = "bzd-messages"
edition = "2024"

[workspace]
resolver = "3"
members = ["lib/api", "lib/migration"]

[dependencies]
bzd-messages-api = { path = "lib/api" }
bzd-lib = { git = "https://github.com/bez-dna/bzd-lib.git" }

axum = "0.8.4"

tokio = { version = "1.47.1", features = ["full"] }

tonic = "0.14.2"
tonic-health = "0.14.2"
tonic-reflection = "0.14.2"

serde = "1.0.219"
serde_json = "1.0.143"

sea-orm = { version = "1.1.16", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }

config = { version = "0.15.15", default-features = false, features = ["toml"] }
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["v7"] }
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.16"
chrono = "0.4.42"
