[package]
name = "bzd-messages"
edition = "2024"

[workspace]
resolver = "3"
members = ["lib/api", "lib/migration"]

[dependencies]
bzd-messages-api = { path = "lib/api" }
bzd-lib = { git = "https://github.com/bez-dna/bzd-lib.git" }

axum = "0.8.8"

tokio = { version = "1.49.0", features = ["full"] }

tonic = "0.14.3"
tonic-health = "0.14.3"
tonic-reflection = "0.14.3"

prost = "0.14.3"
prost-types = "0.14.3"

serde = "1.0.228"
serde_json = "1.0.149"

sea-orm = { version = "1.1.19", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "mock",
] }

async-nats = "0.46.0"

config = { version = "0.15.19", default-features = false, features = ["toml"] }
tracing = "0.1.44"
uuid = { version = "1.20.0", features = ["v7"] }
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.18"
chrono = "0.4.43"
bytes = "1.11.0"
